<resources>
    <string name="app_name">ZfsoftAssit</string>
    <string name="app_menu">ZfsoftMenu</string>
    <string name="menu_course_share">分享到</string>
    <string name="menu_course_sync">同步课表信息</string>
    <string name="menu_course_week_change">切换当前周数</string>
    <string name="menu_course_week_view">切换到周课表</string>
    <string name="menu_back_today">回到本周课表</string>
    <string name="menu_course_add">添加课程</string>
    <string name="navigation_courses">课表</string>
    <string name="navigation_results">成绩</string>
    <string name="navigation_exams">考试</string>
    <string name="navigation_tool">工具</string>
    <string name="navigation_feedback">反馈</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_about">关于</string>

    <string name="navigation_tool_room">空教室</string>
    <string name="navigation_tool_electric">查电费</string>
    <string name="navigation_tool_news">看新闻</string>
    <string name="navigation_tool_calendar">查校历</string>
    <string name="navigation_tool_books">查图书</string>

    <string name="prompt_sno">学号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_checkcode">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">学号应该是10位!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="err_login_checkcode">"验证码不正确"</string>
    <string name="err_login_idorpswd">"学号或密码不正确"</string>
    <string name="err_login_zfsoft">"教务系统出现故障请稍候重试."</string>
    <string name="err_load_checkcode">验证码加载失败"</string>
    <string name="err_login_viewstate">"获取viewstate参数失败"</string>
</resources>
