<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_course_week_change"
        android:title="@string/menu_course_week_change"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_course_share"
        android:title="@string/menu_course_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_course_week"
        android:title="@string/menu_course_week_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_course_add"
        android:title="@string/menu_course_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_course_sync"
        android:title="@string/menu_course_sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_back_today"
        android:title="@string/menu_back_today"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_feedback"
        android:title="@string/navigation_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_about"
        android:title="@string/navigation_about"
        app:showAsAction="never" />
</menu>